CoulometricsSite/static/css/main.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
}

body {
	line-height: 20px;
	font-family: 'Droid Sans', Arial, Verdana, sans-serif;
	font-size: 14px;
	color: #929292;
	background-color: #ffffff;
	padding-top: 0px;
	padding-bottom: 98px;
}

header {
	height: auto;
	padding: 25px 5px 10px 5px;
	position: relative;
}

li {
	float: left;
}

nav {
	position: relative;
}

ul {
	display: inline-block;
	margin-block-start: 1em;
	margin-block-end: 1em;
	margin-inline-start: 0px;
	margin-inline-end: 0px;
	padding-inline-start: 40px;
	list-style-type: none;
}

div.home {
	padding: 10 0 30 0;
}

footer p.copyright {
	margin: auto;
	text-align: center;
}

img.logo {
	float: left;
	height: auto;
	position: relative;
	width: auto;
}

.container {
	margin: 0 auto;
	position: relative;
	text-align: left;
	width: 960px;
}

.top-menu {
	float: left;
	position: relative; 
}

.top-menu-item {
	color: #22a1cc;
	font-size: 16px;
	font-weight: bold;
	padding: 0px 9px;
	text-transform: uppercase;
}

#search-bar {
	position : absolute;
	top: 1px;
	right: 1px;
}

